# vitis_library_compilation_sample

./: CMakeLists.txt  README.md
host/: CMakeLists.txt  vecadd.cpp  vecadd.h  vecadd_test.cpp  xrt.ini
hw_kernel/: CMakeLists.txt  vadd.cpp
hw_link/: CMakeLists.txt
platform/: CMakeLists.txt  platform.tcl
